--- a/src/app/commonComponent/file-upload/file-upload.component.html
+++ b/src/app/commonComponent/file-upload/file-upload.component.html
@@ -1,10 +1,9 @@
 <div class="upload-box p-3">
-    <input type="file" class="form-control-file" id="uploadFile" hidden #fileInput (change)="onFileSelected($event)">
-    <div class="d-flex flex-column" (click)="triggerFileUpload()">
-      <i class="boschicon-bosch-ic-upload fz-24px fw-bold"></i>
-      <span class="fw-bold fz-16px">Drag and drop files/folder here</span>
-      <span class="fw-bold fz-16px">or <a  class="c-black cursor-pointer">browse</a> to upload.</span>
-      <span *ngIf="fileName" class="text-primary mt-2">{{ fileName['name'] }}</span>
-    </div>
+  <input type="file" class="form-control-file" id="uploadFile" hidden #fileInput (change)="onFileSelected($event)" [accept]=acceptedFileTypes>
+  <div class="d-flex flex-column" (click)="triggerFileUpload()">
+    <i class="boschicon-bosch-ic-upload fz-24px fw-bold"></i>
+    <span class="fw-bold fz-16px">Drag and drop files/folder here</span>
+    <span class="fw-bold fz-16px">or <a class="c-black cursor-pointer">browse</a> to upload.</span>
+    <span *ngIf="fileName" class="text-primary mt-2">{{ fileName['name'] }}</span>
   </div>
-  
+</div>
