--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,7 +9,7 @@
                         </a>
                         <span class="px-2">|</span>
                         <div class="genesis">
-                            Genasis
+                            Genesis
                         </div>
                     </div>
                 </div>
