--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -324,7 +324,8 @@
                         <!-- Icons -->
                         <div class="d-flex">
                             <i class="boschicon-bosch-ic-edit ms-3" title="Edit" (click)="edit_node(node.node_id)"></i>
-                            <i class="boschicon-bosch-ic-download ms-3" title="Download"></i>
+                            <i class="boschicon-bosch-ic-download ms-3" title="Download" tabindex="1"
+                                (click)="download_node(node.node_id)"></i>
                             <i class="boschicon-bosch-ic-delete ms-3" title="Delete" tabindex="1"
                                 (click)="deleteNode(node.node_id)"></i>
                             <i class="boschicon-bosch-ic-options-vertical ms-3" title="More options" tabindex="1"
