--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="header" >
       <app-header></app-header>
     </div>
-    <div class="pageContainer mt-3">
+    <div class="pageContainer py-3">
       <div class="h-100 w-100 ">
         <router-outlet></router-outlet>
       </div>
