--- a/src/app/pages/projects/projects.component.html
+++ b/src/app/pages/projects/projects.component.html
@@ -1,7 +1,7 @@
 <div class="pg-container px-5 h-100 w-100 d-flex flex-column mt-2">
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
-            <h3 class="page-title">Create New Project</h3>
+            <h3 class="page-title">Create New Projectt</h3>
             <p>
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
