--- a/src/app/pages/datasets/datasets.component.html
+++ b/src/app/pages/datasets/datasets.component.html
@@ -34,7 +34,7 @@
         <form>
             <div class="row gx-0 mt-3">
                 <div class="col mb-3">
-                    <app-input [label]="'Enter Name'" [required]="true" [(value)]="addNewDatasets.name"></app-input>
+                    <app-input [label]="'Enter Name'" [placeHolder]="'Enter Name'" [required]="true" [(value)]="addNewDatasets.name"></app-input>
                 </div>
             </div>
             <div class="mb-3">
