--- a/src/app/commonComponent/file-upload/file-upload.component.html
+++ b/src/app/commonComponent/file-upload/file-upload.component.html
@@ -4,6 +4,6 @@
     <i class="boschicon-bosch-ic-upload fz-24px fw-bold"></i>
     <span class="fw-bold fz-16px">Drag and drop files/folder here</span>
     <span class="fw-bold fz-16px">or <a class="c-black cursor-pointer">browse</a> to upload.</span>
-    <span *ngIf="fileName" class="text-primary mt-2">{{ fileName['name'] }}</span>
+    <span *ngIf="fileName" class="text-primary mt-2">{{ fileName?.name }}</span>
   </div>
 </div>
