--- a/src/app/commonComponent/input/input.component.html
+++ b/src/app/commonComponent/input/input.component.html
@@ -1,4 +1,4 @@
-<div class="input-container">
+<div class="input-container" [ngClass]="disabled?'disabled-class':''">
     <span  class="fz-12px ">{{label}}
         <span *ngIf="required" class="required-asterisk">*</span>
     </span>
