--- a/src/app/commonComponent/select-dropdown/select-dropdown.component.scss
+++ b/src/app/commonComponent/select-dropdown/select-dropdown.component.scss
@@ -66,3 +66,11 @@
     top: 0;
     left: 0;
   }
+  .dropdown-parent.disabled-class-dropdown {
+    ::ng-deep .dropdown-btn {
+      cursor: not-allowed !important;
+      opacity: 70%;
+    }
+  }
+  
+  
