--- a/src/app/pages/datasets/datasets.component.html
+++ b/src/app/pages/datasets/datasets.component.html
@@ -2,7 +2,7 @@
     <div class="row gx-0 m-0 justify-content-between mb-3 ">
         <div class="col fw-bold fz-42px">All Available Datasets</div>
         <div class="col-auto ms-auto ">
-            <app-search (search)="onSearch($event)"></app-search>
+            <app-search (valueChange)="onSearch($event)"></app-search>
         </div>
     </div>
     <div class="row mb-3">
