--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -66,11 +66,11 @@
                                         <div class="s-card-action">
                                             <ul>
                                                 <li>
-                                                    <i class="boschicon-bosch-ic-edit"></i>
+                                                    <i class="boschicon-bosch-ic-edit cursor-not-allowed"></i>
                                                     <!-- <img width="16" src="../../../assets/edit-icon.svg"> -->
                                                 </li>
                                                 <li>
-                                                    <i class="boschicon-bosch-ic-delete" (click)="deleteAsset(item.asset_id)"></i>
+                                                    <i class="boschicon-bosch-ic-delete cursor-pointer" (click)="deleteAsset(item.asset_id)"></i>
 
                                                     <!-- <img width="16" src="../../../assets/delete-icon.svg"> -->
                                                 </li>
