--- a/src/styles.scss
+++ b/src/styles.scss
@@ -239,6 +239,9 @@ dl {
 .cursor-pointer {
   cursor: pointer;
 }
+.cursor-not-allowed{
+  cursor: not-allowed;
+}
 
 .scroll {
   overflow-x: hidden;
