--- a/src/app/commonComponent/tag-display/tag-display.component.html
+++ b/src/app/commonComponent/tag-display/tag-display.component.html
@@ -10,12 +10,12 @@
 </div>
 
 <!-- Modal for displaying all tags -->
-<app-modal [zIndex]="'9998'" *ngIf="openAllTagsModal" [(view)]="openAllTagsModal" [header]="'All Tags'"
+<app-modal [zIndex]="'9998'" *ngIf="openAllTagsModal" [(view)]="openAllTagsModal" [header]="modalHeader"
     [styles]="{ width: '20vw' }">
     <div class="modal-body overflow-auto fh">
         <div class="row gx-0 m-0 flex-glow-1 scroll border-top-1 ps-1">
             <div class="col mt-3">
-                <!-- <h6 class="font-weight-600 my-3">All Tags</h6> -->
+                <h6 class="font-weight-600 my-3">All Tags</h6>
                 <span class="label-badge tag-class my-1" *ngFor="let tag of Tags">{{tag}}</span>
             </div>
         </div>
