changing projects to pipeline

--- a/src/app/pages/pipeline/pipeline.component.html
+++ b/src/app/pages/pipeline/pipeline.component.html
@@ -1,7 +1,7 @@
 <div class="pg-container px-5 h-100 w-100 d-flex flex-column mt-2">
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
-            <h3 class="page-title">Create New Projectt</h3>
+            <h3 class="page-title">Create New Pipeline</h3>
             <p>
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
@@ -16,9 +16,9 @@
             <div class="card text-center p-4 h-100">
                 <div class="card-body align-items-center justify-content-center align-content-center">
                     <div class="border-round p-2 m-2 d-inline-flex justify-content-center align-items-center">
-                        <a [routerLink]="['/createproject']"><i class="bi bi-plus-lg" style="font-size: 3rem;"></i></a>
+                        <a [routerLink]="['/createpipeline']"><i class="bi bi-plus-lg" style="font-size: 3rem;"></i></a>
                     </div>
-                    <h5 class="w-50">Create New Blank Project</h5>
+                    <h5 class="w-50">Create New Blank Pipeline</h5>
                 </div>
             </div>
         </div>
