--- a/src/app/pages/datasets/datasets.component.html
+++ b/src/app/pages/datasets/datasets.component.html
@@ -1,6 +1,6 @@
 <div class="h-100 w-100 px-5">
     <div class="row gx-0 m-0 justify-content-between mb-3 ">
-        <div class="col fw-bold fz-42px">All Available Datasets</div>
+        <div class="col fw-bold page-title">All Available Datasets</div>
         <div class="col-auto ms-auto ">
             <app-search (valueChange)="onSearch($event)"></app-search>
         </div>
