--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -1,6 +1,6 @@
 <div class=" d-flex flex-column h-100 w-100 px-5">
     <div class="col-md-12" style="height: 110px;">
-        <h6 class="fw-bold">Module Extension</h6>
+        <div class="page-title fw-bold">Module Extension</div>
         <p>
             Expand your machine learning project by creating custom modules designed to fit your workflow.
             Easily set up custom sources, sinks, algorithms, and accumulators to enhance data processing and
