--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -278,7 +278,7 @@
     <!-- Page Header -->
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
-            <h3 class="page-title">Node Configuration</h3>
+            <div class="page-title">Node Configuration</div>
             <div>
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
