--- a/src/app/pages/pipeline/pipeline.component.html
+++ b/src/app/pages/pipeline/pipeline.component.html
@@ -1,7 +1,7 @@
 <div class="pg-container px-5 h-100 w-100 d-flex flex-column mt-2">
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
-            <h3 class="page-title">Create New Pipeline</h3>
+            <div class="page-title">Create New Pipeline</div>
             <p>
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
@@ -18,7 +18,7 @@
                     <div class="border-round p-2 m-2 d-inline-flex justify-content-center align-items-center">
                         <a [routerLink]="['/createpipeline']"><i class="bi bi-plus-lg" style="font-size: 3rem;"></i></a>
                     </div>
-                    <h5 class="w-50">Create New Blank Pipeline</h5>
+                    <h5 class="w-100">Create New Blank Pipeline</h5>
                 </div>
             </div>
         </div>
