description text style

--- a/src/app/pages/module-extension/module-extension.component.html
+++ b/src/app/pages/module-extension/module-extension.component.html
@@ -1,10 +1,10 @@
 <div class=" d-flex flex-column h-100 w-100 px-5">
-    <div class="col-md-12" style="height: 110px;">
+    <div class="col-md-12">
         <div class="page-title fw-bold">Module Extension</div>
-        <p>
+        <p class="description-title">
             Expand your machine learning project by creating custom modules designed to fit your workflow.
             Easily set up custom sources, sinks, algorithms, and accumulators to enhance data processing and
-            analysisThis flexible extension allows you to integrate unique functionalities, ensuring your
+            analysis . This flexible extension allows you to integrate unique functionalities, ensuring your
             project is equipped to handle specific requirements and maximize performance.
         </p>
     </div>
