--- a/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
+++ b/src/app/pages/nodeconfiguration/nodeconfiguration.component.html
@@ -279,7 +279,7 @@
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
             <div class="page-title">Node Configuration</div>
-            <div>
+            <div class="description-title">
                 Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
                 At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
                 sanctus est Lorem ipsum dolar sit amet
