--- a/src/app/pages/pipeline/pipeline.component.html
+++ b/src/app/pages/pipeline/pipeline.component.html
@@ -2,10 +2,9 @@
     <div class="d-flex align-items-center mb-3 ps-1">
         <div class="col">
             <div class="page-title">Create New Pipeline</div>
-            <p>
-                Paragraph text with style text M. Invidunt ut labore et dolore magna aliquy erat, sed diam voluptua.
-                At vero eos et accusam et jus to duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata
-                sanctus est Lorem ipsum dolar sit amet
+            <p class="description-title">
+                Create your new pipeline to help with your work , with the exclusive technology to progress in your working life.
+                Create pipeline not only to ease your life but to contribute to humanity !!
             </p>
         </div>
     </div>
