--- a/src/app/pages/pipeline/pipeline.component.html
+++ b/src/app/pages/pipeline/pipeline.component.html
@@ -14,10 +14,14 @@
         <div class="col-md-2 projectsCard pe-3 pb-3">
             <div class="card text-center p-4 h-100">
                 <div class="card-body align-items-center justify-content-center align-content-center">
-                    <div class="border-round p-2 m-2 d-inline-flex justify-content-center align-items-center">
-                        <a [routerLink]="['/createpipeline']"><i class="bi bi-plus-lg" style="font-size: 3rem;"></i></a>
-                    </div>
-                    <h5 class="w-100">Create New Blank Pipeline</h5>
+                    <!-- <div class="border-round p-2 m-2 d-inline-flex justify-content-center align-items-center">
+                        <a [routerLink]="['/createpipeline']">
+                            <i class="bi bi-plus-lg" style="font-size: 3rem;"></i>
+                        </a>
+                    </div> -->
+                    <i class="boschicon-bosch-ic-add-frame fz-42px"></i>
+
+                    <span class="w-100 fz-16px">Create New Blank Pipeline</span>
                 </div>
             </div>
         </div>
