--- a/src/assets/css/_variables.scss
+++ b/src/assets/css/_variables.scss
@@ -21,6 +21,7 @@ $font-style-light: 'Bosch Sans, light';
 $font-dark-grey: #A8AFB5;
 
 $primary-blue: #007bc0;
+$primary-blue-shade: #007BC01A;
 
 $white: #FFF;
 $black: #000;
