--- a/src/app/pages/createpipeline/createpipeline.component.html
+++ b/src/app/pages/createpipeline/createpipeline.component.html
@@ -38,7 +38,7 @@
                         </div>
                         
                         <div>
-                            <app-button (klick)="export()"> Save </app-button>
+                            <app-button (klick)="savePipeline()"> Save </app-button>
                         </div>
                     </div>
                 </div>
